# ofxclient

./: .gitignore  pyproject.toml  setup.py
ofxclient/: account.py  cli.py  client.py  config.py  helpers.py  json.py  parse.py  types.py
tests/: ofxconfig.py
yofx/: cli.py  client.py  parse.py
